[metadata]
name = GpAwsAbs
version = 0.0.1
author = Jeremy Pavier
author_email = grid.presence@gmx.com
description = AWS resource abstractions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GridPresence/GpAwsAbs
project_urls =
    Bug Tracker = https://github.com/GridPresence/GpAwsAbs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
